# auth_service

./: .env.example  .flake8  Makefile  README.md  alembic.ini  client.py  client_secret.json  dev.yml  docker-compose.yml  entrypoint.sh  grpc.Dockerfile  grpc.sh  grpc_server.py  main.py  pyproject.toml
.github/workflows/: check.yml
api/schemas/: common.py  enpoints_crud.py  login.py  login_history.py  refresh.py  registry.py  reset_password.py  roles.py  users.py
api/v1/: crud_endpoints.py  google_oauth.py  login.py  login_history.py  logout.py  refresh.py  register.py  reset_password.py  roles.py  users.py
api/v1/schemas/: endpoints.py  roles.py  users.py
core/: app_config.py  commands.py  jwt.py  logger.py  settings.py
core/tracer/: config.py  decorators.py
db/: redis.py
env.example/: .env.prod.example  .env.test.example
grpc_src/: services.py
grpc_src/messages/: permissions_pb2.py  permissions_pb2_grpc.py
grpc_src/protobuf/: permissions.proto
migrations/: env.py
migrations/versions/: 114350fcee1f_all_tables.py
models/: endpoints.py  helpers.py  login_history.py  roles.py  tokens.py  users.py
nginx/conf.d/: site.conf
services/: crud_endpoints.py  google_oauth.py  login.py  login_history.py  logout.py  refresh.py  reset_password.py  roles.py  service.py  users.py
tests/: conftest.py  settings.py
tests/functional/src/: test_user_possibilities.py
